--- a/styles/Animals.module.css
+++ b/styles/Animals.module.css
@@ -79,20 +79,24 @@
 .bioInfo {
     display: flex;
     padding: 2.5rem;
+    align-items: center;
+    width: 80%;
+    margin-left: 10%;
 }
 
 .bioInfo img {
-    height: 250px;
-    width: 300px;
+    height: 320px;
+    width: 400px;
 }
 
 .infoCard {
     padding: 1rem;
-    margin-left: 1rem;
     background-color: rgba(167, 121, 68, 0.363);
     width: 80%;
+    height: 80%;
     color:rgb(85, 85, 85);
-
+    border-radius: 10px;
+    margin-left: 1rem;
 }
 
 .infoCard p {
@@ -120,9 +124,9 @@
     box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 350px;
     margin: 1rem;
-    height: 500px;
+    height: 400px;
     justify-content: flex-start;
 }
 
@@ -159,7 +163,7 @@
     background-size: cover;
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem;
-    height: 250px;
+    height: 200px;
     filter: contrast(95%);
     transition: filter 0.5s cubic-bezier(.43,.41,.22,.91);
 }
