--- a/styles/Control.module.css
+++ b/styles/Control.module.css
@@ -47,8 +47,8 @@
 }
 
 .controlCard img {
-  height: 300px;
-  width: 400px;
+  height: 200px;
+  width: 300px;
   object-fit: cover;
   position: relative;
   right: 160px;
@@ -59,17 +59,32 @@
 .controlCardContainer {
   display: flex;
   flex-direction: column;
-  height: 400px;
-  padding: 2rem;
-  width: 500px;
+  height: 350px;
+  padding: 0.5rem;
+  width: 400px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .controlCardInfo {
-  width: 50%;
+  width: 55%;
   position: relative;
-  left: 50%;
-  top: 20%;
+  left: 40%;
+  top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 300px;
+}
+
+.controlCardInfo a {
+  border: 1px solid rgba(167, 121, 68, 0.363);
+    margin: 1rem;
+    display: flex;
+    justify-content: center;
+    padding: .5rem;
+    width: 93%;
+    color:rgb(85, 85, 85);
+    background-color: rgba(167, 121, 68, 0.363);
 }
 
 .conventionalContainer {
