--- a/styles/RegulationSection.module.scss
+++ b/styles/RegulationSection.module.scss
@@ -55,7 +55,7 @@ $slide-width: 30rem;
   justify-content: center;
   position: relative;
   width: 100%;
-  height: 50%;
+  height: 100vh;
   left: 50%;
   transform: translateX(-50%);
   // background-color: rgba(167, 121, 68, 0.363);
@@ -63,13 +63,13 @@ $slide-width: 30rem;
 
 .carouselinner {
   //--------------------------------------------------------------------------------------
-  height: 49rem;
+  height: 100vh;
   position: relative;
   width: calc(#{27rem * 3});
 }
 
 .carouselcontainer {
-  height: 30rem; /////////////////////////////////////////////////////////////////////////carddddd
+  height: 60vh; /////////////////////////////////////////////////////////////////////////carddddd
   overflow: hidden;
   position: relative;
   width: 100%;
@@ -167,7 +167,7 @@ $slide-width: 30rem;
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 60%;
+  top: 46%;
   transform: translateY(-50%);
 
   &prev {
