--- a/styles/AnimalHero.module.scss
+++ b/styles/AnimalHero.module.scss
@@ -3,8 +3,8 @@
 
 .regulationHero {
   display: flex;
-  background-image: url("https://i.loli.net/2021/05/07/mrTqdUpBS63tlQk.jpg");
-  height: 48rem;
+  background-image: url("/animalHero.png");
+  height: 60rem;
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
