--- a/styles/ProgramCard.module.scss
+++ b/styles/ProgramCard.module.scss
@@ -23,6 +23,7 @@
     display: block;
     position: relative;
     width: 262px;
+    height:300px;
     background-color: #ffb759;
     border-radius: 4px;
     padding: 32px 24px;
