--- a/styles/AnimalHero.module.scss
+++ b/styles/AnimalHero.module.scss
@@ -3,8 +3,8 @@
 
 .regulationHero {
   display: flex;
-  background-image: url("/animalHero.png");
-  height: 60rem;
+  background-image: url("https://i.loli.net/2021/05/10/N7phMl4K3wfc9Ye.jpg");
+  height: 48rem;
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -12,10 +12,9 @@
   display: flex;
   flex-direction: column;
 }
-
 .regulationHeroInfo1 {
   height: 50px;
-  background-color: rgba(223, 213, 201, 0.048);
+  background-color: rgba(109, 109, 109, 0.288);
   position: relative;
   width: 700px;
   color: white;
@@ -29,8 +28,8 @@
 }
 .regulationHeroInfo {
   height: 70px;
-  // background-color: rgba(223, 213, 201, 0.589);
-  background-color: rgba(223, 213, 201, 0.048);
+  // background-color: rgba(109, 109, 109, 0.589);
+  background-color: rgba(109, 109, 109, 0.288);
   position: relative;
   width: 700px;
   color: white;
