--- a/styles/ControlHero.module.scss
+++ b/styles/ControlHero.module.scss
@@ -3,7 +3,9 @@
 
 .regulationHero {
   display: flex;
-  background-image: url("https://i.loli.net/2021/05/10/rYj723DeRw6aEAv.jpg");
+  // background-image: url("https://i.loli.net/2021/05/10/rYj723DeRw6aEAv.jpg");
+  // background-image: url("https://i.loli.net/2021/05/10/5eJ3rz46jUFKHAL.jpg");
+  background-image: url("https://i.loli.net/2021/05/10/lSJ7ACKbyGYXzet.jpg");
   height: 48rem;
   width: 100%;
   background-repeat: no-repeat;
