--- a/styles/Animals.module.css
+++ b/styles/Animals.module.css
@@ -203,7 +203,20 @@
 .controlContainer {
   width: 85%;
   position: relative;
-  left: 15%;
+  /* left: 15%; */
+}
+.containerAll {
+  height: 100vh;
+  width: 100%;
+  /* margin-left: 12%; */
+  flex-direction: row;
+  display: flex;
+  margin-bottom: 20px;
+}
+.containerMenu {
+  width: 14%;
+  flex-direction: column;
+  align-items: center;
 }
 
 .controlSection {
@@ -241,6 +254,8 @@
 
 .menu {
   position: fixed;
+
+  /* margin-top: 20%; */
   bottom: 50px;
 }
 
