--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,6 +16,8 @@
   background-color: rgba(141, 139, 139, 0.349);
   height: 6rem;
   width: 100vw;
+  /* position: fixed;
+  z-index: 12; */
 }
 
 .nav a {
