--- a/styles/Desc.module.scss
+++ b/styles/Desc.module.scss
@@ -8,6 +8,41 @@ html {
        sans-serif;
   }
  } */
+.buttonNew {
+  flex-direction: row;
+  display: flex;
+  width: 300px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.buttonLine {
+  width: 40px;
+  position: absolute;
+  height: 1px;
+}
+.buttonText {
+  // width: 100px;
+  margin-left: 50px;
+  background: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.buttonIcon {
+  width: 48px;
+  height: 48px;
+  margin-left: 110px;
+  background: #007fff;
+  border-radius: 100px;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  display: flex;
+}
+
 .hero {
   visibility: hidden;
   height: 100vh;
@@ -52,6 +87,8 @@ html {
           }
           .btnrow {
             position: relative;
+            height: 48px;
+            width: 200px;
             &:before {
               position: absolute;
               content: "";
@@ -61,7 +98,7 @@ html {
               top: 50%;
               left: -68px;
             }
-            button {
+            .button {
               background: none;
               border: none;
               font-size: 12px;
@@ -86,7 +123,6 @@ html {
                 width: 48px;
                 border-radius: 100px;
                 margin-left: 16px;
-                left: 80px;
                 transform-origin: center center;
               }
             }
